--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "dingo/api": "1.0.*@dev",
+        "cartalyst/sentinel": "~2.0",
+        "intervention/image": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
