--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,34 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
+SERVER_DOMAIN=localhost
+SERVER_STATIC=http://localhost
+SERVER_UPLOAD=http://localhost
+
+APP_TIMEZONE=PRC
+APP_LOCALE=zh-cn
+
+API_DEBUG=true
+API_PREFIX=api
+API_TRANSFORMER=App\Http\Transformers\Adapter\Fractal
+
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=root
+DB_PASSWORD=
+DB_CHARSET=utf8
+DB_COLLATION=utf8_general_ci
+DB_PREFIX=
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mxhichina.com
+MAIL_PORT=465
+MAIL_USERNAME=noreply@xxx.xxx
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=noreply@xxx.xxx
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -16,10 +39,3 @@ QUEUE_DRIVER=sync
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
