--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,12 @@ DB_COLLATION=utf8_general_ci
 DB_PREFIX=
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mxhichina.com
+MAIL_HOST=smtp.163.com
 MAIL_PORT=465
-MAIL_USERNAME=noreply@xxx.xxx
-MAIL_PASSWORD=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=noreply@xxx.xxx
+MAIL_FROM_ADDRESS=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
